fix some alignment issues with main content

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,12 @@ a {
   gap: 2em;
 }
 
+.awesome {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+}
+
 .text,
 .image {
   width: 40%;
@@ -77,8 +83,8 @@ a {
 }
 
 img {
-  height: auto;
-  width: 300px;
+  height: 250px;
+  width: 600px;
   max-width: 100%;
 }
 
